@@ -1,5 +1,6 @@
 Version 6.2.4
 - Fixed some problems with sizeof() used to declare local variables
+- Several improvements to C locale() related functions
 
 Version 6.2.3
 - Added strpbrk(), strcoll(), strspn() functions for the C library
